fix the gap in product

--- a/assignments/project2/css/project2.css
+++ b/assignments/project2/css/project2.css
@@ -178,6 +178,10 @@ section h2{
     padding: 20px;
 
 }
+.gallery-1{
+    width: 27.5%;
+    padding: 1rem;
+}
 .products-section{
     display:flex;
     justify-content: center;
@@ -188,11 +192,13 @@ section h2{
 .description{
     color: var(--secondary-color);
     display: flex;
+    justify-content: center;
     
 }
 .description:hover{
     color: var(--secondary-color);
     text-decoration: underline;
+    justify-content: center;
 }
 nav{
     width: 25%;
